--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@ h2{
    text-decoration: underline;
    border: 1px solid black;
    padding: 8px;
-   margin-left: 35px;
+   margin-left: 335px;
    float: left;
-   margin-right: 
+   margin-right: 300px;
+   border-radius: 8px;
 }
 
 #container{
