--- a/style.css
+++ b/style.css
@@ -13,4 +13,16 @@ h2{
     width: 960px;
     margin:0px auto;
     background: #7EC0EE;
+    height:1000px;
+}
+
+article{
+    border: 1px solid black;
+    width: 200px;
+    padding: 5px;
+    float: left;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 8px;
+    margin-bottom: 10px;
 }
