--- a/style.css
+++ b/style.css
@@ -12,17 +12,35 @@ h2{
 #container{
     width: 960px;
     margin:0px auto;
-    background: #7EC0EE;
+    /*background: #7EC0EE;*/
     height:1000px;
 }
 
 article{
     border: 1px solid black;
     width: 200px;
-    padding: 5px;
     float: left;
     margin-left: 10px;
     margin-right: 10px;
     border-radius: 8px;
     margin-bottom: 10px;
+    background: white;
+}
+
+a{
+    border: 1px solid black;
+    text-decoration: none;
+    padding: 1px;
+    border-radius: 6px;
+    background: #f1f9ff;
+    color: black;
+}
+
+#top-article{
+    border-bottom: 1px solid black;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    background: #7EC0EE;
+    float: left;
+    width: 200px;
 }
