--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h2{
    float: left;
    margin-right: 300px;
    border-radius: 8px;
-   background: #f1f9ff;
+   background: #7EC0EE;
 }
 
 #container{
@@ -37,7 +37,7 @@ a{
     text-decoration: none;
     padding: 1px;
     border-radius: 6px;
-    background: #f1f9ff;
+    background: #7EC0EE;
     color: black;
 }
 
@@ -59,5 +59,5 @@ a{
 }
 
 #bouton-action{
-    margin-top: 5px;
+    margin-left: 10px;
 }
