--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h2{
 
 #container{
     width: 960px;
-    margin:0px auto;
+    margin-left:150px;
     /*background: #7EC0EE;*/
     height:1000px;
     border: 1px solid skyblue;
@@ -19,6 +19,7 @@ h2{
     border-radius: 22px;
     border-top-right-radius: 0px;
     border-bottom-left-radius: 0px;
+    float: left;
 }
 
 article{
@@ -60,6 +61,7 @@ a{
 
 .bouton-action{
     margin-left: 10px;
+    margin-bottom: 10px;
 }
 
 li{
@@ -67,3 +69,38 @@ li{
     list-style-type: none;
     margin-left: 10px;
 }
+
+.prec-suiv{
+    float: left;
+    top: 0px;
+    right: 0px;
+    margin-left: 15px;
+    border: 1px solid black;
+    padding: 6px;
+    border-radius: 6px;
+    background: skyblue;
+}
+
+    #suiv{
+        width: 80px;
+        height: 35px;
+        font-size: 90%;
+        border-radius: 4px;
+        background: white;
+        border:1px solid black;
+        font-weight: bold;
+    }
+
+    #prec{
+        width: 80px;
+        height: 35px;
+        font-size: 90%;
+        border-radius: 4px;
+        background: white;
+        border:1px solid black;
+        font-weight: bold;
+    }
+
+    #fav-orange{
+        background: orange;
+    }
