--- a/style.css
+++ b/style.css
@@ -2,23 +2,20 @@ h2{
    text-decoration: underline;
    border: 1px solid black;
    padding: 8px;
-   margin-left: 335px;
+   margin: 0 335px 0px 300px;
    float: left;
-   margin-right: 300px;
    border-radius: 8px;
    background: #7EC0EE;
 }
 
 #container{
     width: 960px;
-    margin-left:150px;
+    margin: 20px 0 0 150px;
     /*background: #7EC0EE;*/
-    height:1000px;
-    border: 1px solid skyblue;
+    height:460px;
+    border: 7px solid skyblue;
     padding: 10px;
-    border-radius: 22px;
-    border-top-right-radius: 0px;
-    border-bottom-left-radius: 0px;
+    border-radius: 22px 0 22px 0;
     float: left;
 }
 
@@ -26,10 +23,8 @@ article{
     border: 1px solid black;
     width: 200px;
     float: left;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 0 10px 10px 10px;
     border-radius: 8px;
-    margin-bottom: 10px;
     background: white;
 }
 
@@ -44,8 +39,7 @@ a{
 
 #top-article{
     border-bottom: 1px solid black;
-    border-top-right-radius: 8px;
-    border-top-left-radius: 8px;
+    border-radius: 8px 8px 0 0;
     background: #7EC0EE;
     float: left;
     width: 200px;
@@ -70,14 +64,11 @@ li{
     margin-left: 10px;
 }
 
-/*.prec-suiv{
+.prec-suiv{
+    margin-top: 20px;
     float: left;
     margin-left: 15px;
-    border: 1px solid black;
-    padding: 6px;
-    border-radius: 6px;
-    background: skyblue;
-}*/
+}
 
     #suiv{
         width: 80px;
